# asr-transcribe

./: .dockerignore  .envrc  .gitignore  CHANGES_SUMMARY.md  DOCKER.md  Dockerfile  LICENSE  README.md  SUBPROCESS_ARCHITECTURE.md  alignment.py  app_config.py  asr_tools.py  asr_workflow.py  biography experimentation.ipynb  config.example.toml  default_config.py  docker-compose.yml  email_notifications.py  language_utils.py  llm_processing.py  llm_subprocess.py  logger.py  ner.py  original_whisper_word_timestamps.py  pdf_template.html  post_processing.py  pyproject.toml  requirements.txt  simple_workflow.py  stats.py  subprocess_handler.py  test_processing.py  test_subprocess_architecture.py  utilities.py  whisper_subprocess.py  whisper_tools.py  whisperx_workflow_lndw  whisperx_workflow_lndw.py  writers.py
agent-harness/: ASR-TRANSCRIBE.md  setup.py
asr-evaluate/: config_example.py  vtt_cleaning.py  wer_calculation.py
asr-optimize/: module_input_verifying.py  module_wav_conversion_normalizing.py  workflow_audio_optimizer.py
config/: __init__.py  app_config.py  default_config.py
doc_files/: asr_export_formats.rtf  citation.txt  ohd_upload.txt
help/: missing_libcudnn_ops_infer.so.8_fix.md  patch_lightning_fabric.sh  setup_cudnn.sh
llm_workflows/: __init__.py  batched_pipeline.py  chunking.py  llm_debug.py  llm_prompts.py  llm_summarization.py  llm_task_summary.py  llm_task_toc.py  llm_toc.py  shared_synopsis.py
lndw_app/: audio_tools.py  extending_audio_workflow.py  llm_workflow.py  main.py  transcription_workflow.py  translation_workflow.py  tts_workflow.py
model_configs/: gemma-4-26b-a4b-it-q8_0_rtx-pro-5000.toml  gemma-4-31b-it-q4_k_m_rtx-pro-5000.toml  gemma-4-31b-it-q4_k_m_rtx-pro-5000_b.toml  gemma-4-31b-it-ud-q4_k_xl_rtx-pro-5000.toml  gpt-oss-120b-q4_k_m_rtx-pro-5000-b.toml  gpt-oss-120b-q4_k_m_rtx-pro-5000-c.toml  gpt-oss-120b_rtx-pro-5000.toml  qwen2.5-coder-32b-instruct-q8_0_rtx-pro-5000.toml  qwen3.5-122b-a10b-q4_k_m_rtx-pro-5000.toml  (+4 more)
(+71 files in other folders)
