[project]
name = "asr-transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "jinja2>=3.1.6",
    "pyexcel-ods3>=0.6.1",
    "toml>=0.10.2",
    "xhtml2pdf>=0.2.17",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
