[project]
name = "asr-transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "jinja2>=3.1.6",
    "pyexcel-ods3>=0.6.1",
    "toml>=0.10.2",
    "whisperx",
    "xhtml2pdf>=0.2.17",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.6.0",
  "torchaudio>=2.6.0",
  "torchvision>=0.21.0",
]
cu124 = [
  "torch>=2.6.0",
  "torchaudio>=2.6.0",
  "torchvision>=0.21.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
whisperx = { git = "https://github.com/m-bain/whisperX.git" }
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
