[project]
name = "asr-transcribe"
version = "1.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "colorlog==6.8.2",
    "ctranslate2==4.5.0",
    "jinja2==3.1.4",
    "llama-cpp-python>=0.3.16",
    "pycairo>=1.29.0",
    "pyexcel-ods3==0.6.1",
    "pytest==8.3.3",
    "toml==0.10.2",
    "whisperx==3.7.4",
    "xhtml2pdf==0.2.16",
]
